array.island.Island.scala.error
Erreur de compilation :
Island:5: error: Boolean does not take parameters
    return ((num(i) < num(i+1)) || (num(i)!=0)) {
                                                ^Island:4: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-1 to num.length){
        ^