array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compteur=1
  for (i<-1 to num.length){
    return ((num(i) < num(i+1)) || (num(i)!=0)) {
    }}}